# Quick-Intersection-Count-Change-Image-Reproduction

./: README.md  replicate.py
input/: .gitignore
input/hamming_tree_query_times_by_authors/: queryTimes_1002387146.json  queryTimes_1002730908.json  queryTimes_1005529720.json  queryTimes_1010163688.json  queryTimes_1017757155.json  queryTimes_1018775424.json  queryTimes_1023128888.json  queryTimes_1028541135.json  queryTimes_1040897606.json  queryTimes_1041852574.json  queryTimes_1042732435.json  queryTimes_1043583417.json  queryTimes_1045233287.json  queryTimes_1050022217.json  queryTimes_1057452506.json  queryTimes_1059183042.json  queryTimes_1059899515.json  queryTimes_1067152635.json  queryTimes_1069344771.json  queryTimes_1070210369.json  queryTimes_1074720673.json  queryTimes_1075468646.json  queryTimes_1082578831.json  queryTimes_1088350778.json  queryTimes_1089018675.json  queryTimes_1092976741.json  queryTimes_1097618607.json  queryTimes_1100069523.json  queryTimes_1101574399.json  queryTimes_1113186133.json  queryTimes_111505584.json  queryTimes_1117896228.json  queryTimes_1118629269.json  queryTimes_1122781897.json  queryTimes_1126424346.json  queryTimes_1131728145.json  queryTimes_113217320.json  queryTimes_1136761879.json  queryTimes_1140388177.json  queryTimes_114958473.json  (+1042 more)
input/results_computed_by_authors/: .gitignore
output/: .gitignore  filemap.json
output/chart_spreadheets_created_by_authors/: Generation Rates (Figure 13).ods
output/chart_spreadsheets_created_by_authors/: COMPARISON TIMES CHART V3.ods  Comparison Rates (Figure 14).ods  MAIN PERFORMANCE CHART V3.ods  Matching Performance (Figure 10).ods  Support Angle Analysis (Figure 11).ods  baseline_distance_distributions.ods
res/: seeds_of_objects_shown_in_figures.txt  seeds_used_for_clutterbox_experiments.txt  seeds_used_for_fpfh.txt  seeds_used_to_create_charts.txt
res/chart_spreadsheets_created_by_authors/: GENERATION PERFORMANCE CHART V3.ods
scripts/: analyseQueryTimes.py  buildDistanceFunctionsSpreadsheet.py  buildmasterspreadsheet.py  buildspreadsheets.py  compileresultfiles.py  generatechartsspreadsheet.py  ubuntu_install_cuda.sh  ubuntu_install_dependencies_except_cuda.sh
src/clutterbox/: .gitignore  CMakeLists.txt
src/clutterbox/src/: main.cpp
src/clutterbox/src/experiments/: clutterBoxExperiment.cpp  clutterBoxExperiment.hpp
src/clutterbox/src/experiments/clutterBox/: clutterBoxKernels.cu  clutterBoxKernels.cuh  clutterBoxUtilities.cpp  clutterBoxUtilities.h
src/clutterbox/src/utilities/: Histogram.cpp  Histogram.h  listDir.cpp  randomFileSelector.cpp  randomFileSelector.h  stringUtils.cpp  stringUtils.h
src/clutterbox/tools/clutterEstimator/: clutterKernel.cu  clutterKernel.cuh  main.cpp
src/clutterbox/tools/clutterboxSceneVisualiser/: generateScreenshots.py
src/clutterbox/tools/missingseeddumper/: convertindices.py  idun_qsifix_v4_run_failed.txt  seeds_idun_qsifix_failed.txt  seeds_lotsofojects.txt
src/clutterbox/tools/projectionBenchmark/: compare.cpp
src/clutterbox/tools/quicciDistanceFunctionComparison/: clutterSphereMeshAugmenter.cpp  clutterSphereMeshAugmenter.h  main.cpp  quicciDistanceFunctionBenchmark.cpp  quicciDistanceFunctionBenchmark.h
src/clutterbox/tools/seeddumper/: seeddumper.py  seeds_earlycutoff.txt
src/clutterbox/tools/servermanager/: history.txt  servermanager.py
src/libSpinImage/: CMakeLists.txt
src/libSpinImage/src/spinImage/cpu/index/: SequentialIndexQueryer.cpp
src/libSpinImage/src/spinImage/utilities/copy/: deviceDescriptorsToHost.h  (+1 more)
src/libSpinImage/tools/indexBenchmark/: main.cpp
(+1 files in other folders)
